# veracrypt-forensic

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  clippy.toml  mkdocs.yml  release-plz.toml
.github/workflows/: ci.yml  fuzz.yml  release-plz.yml
core/: CHANGELOG.md  Cargo.toml
core/fuzz/: Cargo.toml
core/fuzz/fuzz_targets/: fuzz_header.rs  fuzz_unlock.rs
core/src/: crypto.rs  error.rs  header.rs  lib.rs  vfs.rs  volume.rs
core/tests/: oracle_veracrypt.rs
core/tests/common/: mod.rs
docs/: PRD.md  RESEARCH.md  index.md  privacy.md  terms.md  validation.md
docs/decisions/: 0001-two-crate-reader-analyzer-split.md  0002-from-scratch-pure-rust-decryptor.md  0003-header-format-big-endian-dual-crc-brute.md  0004-optional-forensic-vfs-encryptionlayer.md  0005-forbid-unsafe-panic-free-fuzzed.md  0006-cascade-xts-key-layout-cryptsetup.md  0007-tier1-validation-independent-oracles.md  0008-low-library-msrv-floor.md
forensic/: CHANGELOG.md  Cargo.toml
forensic/src/: lib.rs
supply-chain/: config.toml
tests/data/: README.md
tests/oracle/: README.md
