[workspace]
resolver = "2"
members = ["core", "forensic"]

[workspace.package]
version      = "0.1.0"
edition      = "2021"
rust-version = "1.81"
license      = "Apache-2.0"
authors      = ["Albert Hui <albert@securityronin.com>"]
repository   = "https://github.com/SecurityRonin/veracrypt-forensic"

[workspace.dependencies]
thiserror = "2"
# Crypto — audited RustCrypto crates only, never hand-rolled.
aes      = "0.8"
twofish  = "0.7"
xts-mode = "0.5"
sha2     = "0.10"
ripemd   = "0.1"
whirlpool = "0.10"
streebog = "0.10"
hmac     = "0.12"
pbkdf2   = { version = "0.12", default-features = false, features = ["hmac"] }
crc32fast = "1"
veracrypt = { version = "0.1", path = "core", package = "veracrypt-core" }

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all                      = { level = "warn",  priority = -1 }
pedantic                 = { level = "warn",  priority = -1 }
correctness              = { level = "deny",  priority = -1 }
suspicious               = { level = "deny",  priority = -1 }
unwrap_used              = { level = "deny",  priority = 0  }
expect_used              = { level = "deny",  priority = 0  }
module_name_repetitions  = { level = "allow", priority = 1  }
must_use_candidate       = { level = "allow", priority = 1  }
missing_errors_doc       = { level = "allow", priority = 1  }
missing_panics_doc       = { level = "allow", priority = 1  }
cast_possible_truncation = { level = "allow", priority = 1  }
cast_possible_wrap       = { level = "allow", priority = 1  }
cast_sign_loss           = { level = "allow", priority = 1  }
cast_precision_loss      = { level = "allow", priority = 1  }
too_many_lines           = { level = "allow", priority = 1  }
items_after_statements   = { level = "allow", priority = 1  }
similar_names            = { level = "allow", priority = 1  }
manual_let_else          = { level = "allow", priority = 1  }
doc_markdown             = { level = "allow", priority = 1  }

[profile.release]
lto           = "thin"
codegen-units = 1
