[package]
name         = "veracrypt-core"
description   = "Pure-Rust VeraCrypt/TrueCrypt reader and decryptor — brute the header PRF+cipher, recover the master key, and decrypt the volume. Panic-free, no unsafe."
version      = { workspace = true }
edition      = { workspace = true }
rust-version = { workspace = true }
license      = { workspace = true }
authors      = { workspace = true }
repository   = { workspace = true }
readme       = "../README.md"
keywords     = ["veracrypt", "truecrypt", "forensics", "encryption", "xts"]
categories   = ["cryptography", "filesystem", "parser-implementations"]

[lib]
name = "veracrypt"

[dependencies]
thiserror = { workspace = true }
aes       = { workspace = true }
serpent   = { workspace = true }
twofish   = { workspace = true }
xts-mode  = { workspace = true }
sha2      = { workspace = true }
ripemd    = { workspace = true }
whirlpool = { workspace = true }
streebog  = { workspace = true }
hmac      = { workspace = true }
pbkdf2    = { workspace = true }
crc32fast = { workspace = true }

[lints]
workspace = true
