[package]
name         = "veracrypt-core"
description   = "Pure-Rust VeraCrypt/TrueCrypt reader and decryptor — brute the header PRF+cipher, recover the master key, and decrypt the volume. Panic-free, no unsafe."
version      = { workspace = true }
edition      = { workspace = true }
rust-version = { workspace = true }
license      = { workspace = true }
authors      = { workspace = true }
repository   = { workspace = true }
readme       = "../README.md"
keywords     = ["veracrypt", "truecrypt", "forensics", "encryption", "xts"]
categories   = ["cryptography", "filesystem", "parser-implementations"]

[lib]
name = "veracrypt"

[features]
default = []
# forensic-vfs EncryptionLayer contract (optional): present a decrypted VeraCrypt
# volume as an ImageSource. Behind the `vfs` feature (ADR 0004). Depends on
# `forensic-vfs 0.4`, which carries the `EncryptionScheme::VeraCrypt` variant. The
# decryption is veracrypt-core's own audited RustCrypto; this only wires it.
vfs = ["dep:forensic-vfs"]

[dependencies]
thiserror = { workspace = true }
forensic-vfs = { version = "0.5", optional = true }
aes       = { workspace = true }
serpent   = { workspace = true }
twofish   = { workspace = true }
xts-mode  = { workspace = true }
sha2      = { workspace = true }
ripemd    = { workspace = true }
whirlpool = { workspace = true }
streebog  = { workspace = true }
hmac      = { workspace = true }
pbkdf2    = { workspace = true }
crc32fast = { workspace = true }

[lints]
workspace = true
