[package]
name = "veracrypt-core-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.veracrypt]
path = ".."
package = "veracrypt-core"

# Prevent this from interfering with workspace members up the tree.
[workspace]

[profile.release]
debug = 1

[[bin]]
name = "fuzz_header"
path = "fuzz_targets/fuzz_header.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_unlock"
path = "fuzz_targets/fuzz_unlock.rs"
test = false
doc = false
bench = false
